Fix flickering, FIx theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -76,3 +76,16 @@ a.MuiTypography-root {
 a.MuiTypography-root:hover {
   color: #A72618;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  animation: fadeIn .3s ease-in forwards;
+}
